[package]
name = "questests-rest"
version = "0.1.0"
authors = ["Oleg Kashaev <oleg.kashaev@pl.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7"
chrono = "0.4"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
mongodb = "1.1.0"
futures = "0.3.5"
dotenv = "0.15.0"
